--- a/index.html
+++ b/index.html
@@ -9,7 +9,9 @@
 
 <body>
     <header></header>
-    <main></main>
+    <main>
+        <p></p>
+    </main>
     <footer></footer>
 </body>
 </html>
