--- a/index.html
+++ b/index.html
@@ -9,9 +9,7 @@
 
 <body>
     <header></header>
-    <main>
-        <p></p>
-    </main>
+    <main></main>
     <footer></footer>
 </body>
 </html>
