--- a/index.html
+++ b/index.html
@@ -3,12 +3,39 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="./style.css">
     <title>Pizzaria Tony</title>
 </head>
 
 <body>
-    <header></header>
+    <header>
+        <img src="./img/logo/Logo.svg" alt="logo do tony ">
+        <menu>
+      
+                <li>
+                    <a href="#">home</a>
+                </li>
+                <li>
+                    <a href="#">cardapio</a>
+                </li>
+                <li>
+                    <a href="#">serviço</a>
+                </li>
+                <li>
+                    <a href="#">localização</a>
+                </li>
+                <li>
+                    <a href="#">contato</a>
+                </li>
+            
+           </menu>
+        <button>
+            <img src="./img/Vector (1).svg" alt="icom usuario"> usuario
+        </button>
+    </header>
     <main></main>
     <footer></footer>
 </body>
