adição das pizzas com animação e pizza com criação do hero e do container-pizza

--- a/index.html
+++ b/index.html
@@ -33,10 +33,62 @@
             
            </menu>
         <button>
-            <img src="./img/Vector (1).svg" alt="icom usuario"> usuario
+            <img src="./img/login/Vector (1).svg" alt="icom usuario"> LOGIN
         </button>
     </header>
-    <main></main>
+    <main>
+        <section class="home">
+            <div class="hero">
+                <h2>Não é apenas uma <span>Pizza,</span> é uma experiência!</h2>
+                <img src="./img/pizza inicial/pizza.png" alt="Pizza">
+            </div>
+            <div class="container-pizza">
+                <div class="pizza">
+                    <div class="adicionar">+</div>
+                    <img src="./img/pizzas menu/pizza1.png" alt="">
+                    <div class="animacao">
+                        <div class="container-info">
+                            <p>Pizza de calabreza com queijo</p>
+                            <span>R$ 16,00</span>
+                        </div>
+                    </div>
+                </div>
+               
+                <div class="pizza">
+                    <div class="adicionar">+</div>
+                    <img src="./img/pizzas menu/pizza (2).png" alt="">
+                    <div class="animacao">
+                        <div class="container-info">
+                            <p>Pizza de calabreza com queijo</p>
+                            <span>R$ 16,00</span>
+                        </div>
+                    </div>
+                </div>
+                <div class="pizza">
+                    <div class="adicionar">+</div>
+                    <img src="./img/pizzas menu/pizza3.png" alt="">
+                    <div class="animacao">
+                        <div class="container-info">
+                            <p>Pizza de calabreza com queijo</p>
+                            <span>R$ 16,00</span>
+                        </div>
+                    </div>
+                </div>
+                <div class="pizza">
+                    <div class="adicionar">+</div>
+                    <img src="./img/pizzas menu/pizza4.png" alt="">
+                    <div class="animacao">
+                        <div class="container-info">
+                            <p>Pizza de calabreza com queijo</p>
+                            <span>R$ 16,00</span>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </section>
+        <section class="cardapio"></section>
+        <section class="servico"></section>
+    </main>
     <footer></footer>
 </body>
 </html>
